--- a/templates/base/task_list.html
+++ b/templates/base/task_list.html
@@ -23,7 +23,7 @@
 
         <form action="" method="get" class="search-form">
             <input type="text" name="search-area" id="" value="{{search_input}}">
-            <input class="button" type="submit" value="search">
+            <input class="button" type="submit" value="search" style="margin-left: 8px;">
         </form>
         <a id="add-link" href="{% url 'task_create' %}">&#x2b</a>
     </div>
