--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -14,6 +14,6 @@
 </div>
 
 
-    <p>Dont't Have an account ? </p><a href="{% url 'register'%}">Signup</a>
+    <p>Don't Have an account ? </p><a href="{% url 'register'%}">Signup</a>
 
 {% endblock %}
